# sudoku

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  vcpkg-configuration.json  vcpkg.json
src/: main.cpp  ui.cpp  ui.h
src/utils/: fs.cpp  fs.h  sudoku.h  table.cpp  table.h
